--- a/package.json
+++ b/package.json
@@ -10,29 +10,31 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "2.2.1",
-    "@angular/compiler": "2.2.1",
-    "@angular/compiler-cli": "2.2.1",
-    "@angular/core": "2.2.1",
-    "@angular/forms": "2.2.1",
-    "@angular/http": "2.2.1",
-    "@angular/platform-browser": "2.2.1",
-    "@angular/platform-browser-dynamic": "2.2.1",
-    "@angular/platform-server": "2.2.1",
-    "@ionic-native/inappbrowser": "^3.0.0",
-    "@ionic-native/nativestorage": "^3.0.0",
+    "@angular/common": "4.0.0",
+    "@angular/compiler": "4.0.0",
+    "@angular/compiler-cli": "4.0.0",
+    "@angular/core": "4.0.0",
+    "@angular/forms": "4.0.0",
+    "@angular/http": "4.0.0",
+    "@angular/platform-browser": "4.0.0",
+    "@angular/platform-browser-dynamic": "4.0.0",
+    "@ionic-native/in-app-browser": "3.2.1",
+    "@ionic-native/native-storage": "3.4.4",
+    "@ionic-native/core": "3.4.4",
+    "@ionic-native/splash-screen": "3.4.2",
+    "@ionic-native/status-bar": "3.4.2",    
     "@ionic/cloud-angular": "^0.11.0",
-    "@ionic/storage": "1.1.7",
-    "ionic-angular": "2.1.0",
+    "@ionic/storage": "2.0.1",
+    "ionic-angular": "3.1.1",
     "ionicons": "3.0.0",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "5.1.1",
     "sw-toolbox": "3.4.0",
-    "zone.js": "0.6.26"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "1.1.3",
+    "@ionic/app-scripts": "1.3.0",
     "angular-in-memory-web-api": "^0.3.0",
-    "typescript": "2.0.9"
+    "typescript": "~2.2.1"
   },
   "cordovaPlugins": [
     "cordova-plugin-whitelist",
@@ -40,7 +42,9 @@
     "cordova-plugin-statusbar",
     "cordova-plugin-splashscreen",
     "cordova-plugin-device",
-    "ionic-plugin-keyboard"
+    "ionic-plugin-keyboard",
+    "cordova-plugin-inappbrowser",
+    "cordova-plugin-nativestorage"
   ],
   "cordovaPlatforms": [],
   "description": "git-switch: An Ionic project"
