--- a/package.json
+++ b/package.json
@@ -1,51 +1,75 @@
 {
-  "name": "ionic-hello-world",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
-  "private": true,
-  "scripts": {
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
-  },
-  "dependencies": {
-    "@angular/common": "4.0.0",
-    "@angular/compiler": "4.0.0",
-    "@angular/compiler-cli": "4.0.0",
-    "@angular/core": "4.0.0",
-    "@angular/forms": "4.0.0",
-    "@angular/http": "4.0.0",
-    "@angular/platform-browser": "4.0.0",
-    "@angular/platform-browser-dynamic": "4.0.0",
-    "@ionic-native/in-app-browser": "3.2.1",
-    "@ionic-native/native-storage": "3.4.4",
-    "@ionic-native/core": "3.4.4",
-    "@ionic-native/splash-screen": "3.4.2",
-    "@ionic-native/status-bar": "3.4.2",    
-    "@ionic/cloud-angular": "^0.11.0",
-    "@ionic/storage": "2.0.1",
-    "ionic-angular": "3.1.1",
-    "ionicons": "3.0.0",
-    "rxjs": "5.1.1",
-    "sw-toolbox": "3.4.0",
-    "zone.js": "^0.8.4"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "1.3.0",
-    "angular-in-memory-web-api": "^0.3.0",
-    "typescript": "~2.2.1"
-  },
-  "cordovaPlugins": [
-    "cordova-plugin-whitelist",
-    "cordova-plugin-console",
-    "cordova-plugin-statusbar",
-    "cordova-plugin-splashscreen",
-    "cordova-plugin-device",
-    "ionic-plugin-keyboard",
-    "cordova-plugin-inappbrowser",
-    "cordova-plugin-nativestorage"
-  ],
-  "cordovaPlatforms": [],
-  "description": "git-switch: An Ionic project"
+    "name": "ionic-hello-world",
+    "author": "Ionic Framework",
+    "homepage": "http://ionicframework.com/",
+    "private": true,
+    "scripts": {
+        "clean": "ionic-app-scripts clean",
+        "build": "ionic-app-scripts build",
+        "ionic:build": "ionic-app-scripts build",
+        "ionic:serve": "ionic-app-scripts serve"
+    },
+    "dependencies": {
+        "@angular/common": "4.0.0",
+        "@angular/compiler": "4.0.0",
+        "@angular/compiler-cli": "4.0.0",
+        "@angular/core": "4.0.0",
+        "@angular/forms": "4.0.0",
+        "@angular/http": "4.0.0",
+        "@angular/platform-browser": "4.0.0",
+        "@angular/platform-browser-dynamic": "4.0.0",
+        "@ionic-native/in-app-browser": "3.2.1",
+        "@ionic-native/native-storage": "3.4.4",
+        "@ionic-native/core": "3.4.4",
+        "@ionic-native/splash-screen": "3.4.2",
+        "@ionic-native/status-bar": "3.4.2",
+        "@ionic/cloud-angular": "^0.11.0",
+        "@ionic/storage": "2.0.1",
+        "ionic-angular": "3.1.1",
+        "ionicons": "3.0.0",
+        "rxjs": "5.1.1",
+        "sw-toolbox": "3.4.0",
+        "zone.js": "^0.8.4",
+        "cordova-plugin-console": "1.0.5",
+        "cordova-plugin-device": "1.1.4",
+        "cordova-plugin-inappbrowser": "~1.7.0",
+        "cordova-plugin-nativestorage": "2.2.2",
+        "cordova-plugin-splashscreen": "~4.0.1",
+        "cordova-plugin-statusbar": "2.2.1",
+        "cordova-plugin-whitelist": "1.3.1",
+        "ionic-plugin-keyboard": "~2.2.1"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "1.3.0",
+        "angular-in-memory-web-api": "^0.3.0",
+        "typescript": "~2.2.1",
+        "gulp": "^3.5.6",
+        "gulp-cheerio": "^0.6.2",
+        "del": "^2.2.0",
+        "gulp-zip": "4.0.0"
+    },
+    "cordovaPlugins": [
+        "cordova-plugin-whitelist",
+        "cordova-plugin-console",
+        "cordova-plugin-statusbar",
+        "cordova-plugin-splashscreen",
+        "cordova-plugin-device",
+        "ionic-plugin-keyboard",
+        "cordova-plugin-inappbrowser",
+        "cordova-plugin-nativestorage"
+    ],
+    "cordovaPlatforms": [],
+    "description": "git-switch: An Ionic project",
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-console": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-inappbrowser": {},
+            "cordova-plugin-nativestorage": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-whitelist": {},
+            "ionic-plugin-keyboard": {}
+        }
+    }
 }
