--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "@angular/http": "4.0.0",
         "@angular/platform-browser": "4.0.0",
         "@angular/platform-browser-dynamic": "4.0.0",
-      "@ionic-native/core": "3.4.4",
+        "@ionic-native/core": "3.4.4",
         "@ionic-native/in-app-browser": "3.2.1",
         "@ionic-native/native-storage": "3.4.4",
         "@ionic-native/splash-screen": "3.4.2",
@@ -32,23 +32,24 @@
         "cordova-plugin-splashscreen": "~4.0.1",
         "cordova-plugin-statusbar": "2.2.1",
         "cordova-plugin-whitelist": "1.3.1",
-      "ionic-angular": "3.1.1",
-      "ionic-plugin-keyboard": "~2.2.1",
-      "ionicons": "3.0.0",
-      "rxjs": "5.1.1",
-      "sw-toolbox": "3.4.0",
-      "zone.js": "^0.8.4"
+        "ionic-angular": "3.1.1",
+        "ionic-plugin-keyboard": "~2.2.1",
+        "ionicons": "3.0.0",
+        "rxjs": "5.1.1",
+        "sw-toolbox": "3.4.0",
+        "zone.js": "^0.8.4"
     },
     "devDependencies": {
         "@ionic/app-scripts": "1.3.0",
-      "@ionic/cli-plugin-cordova": "^1.1.2",
-      "@ionic/cli-plugin-ionic-angular": "^1.1.2",
+        "@ionic/cli-plugin-cordova": "^1.1.2",
+        "@ionic/cli-plugin-ionic-angular": "^1.1.2",
         "angular-in-memory-web-api": "^0.3.0",
-      "del": "^2.2.0",
+        "del": "^2.2.0",
         "gulp": "^3.5.6",
         "gulp-cheerio": "^0.6.2",
-      "gulp-zip": "4.0.0",
-      "typescript": "~2.2.1"
+        "gulp-zip": "4.0.0",
+        "run-sequence": "^1.2.2",
+        "typescript": "~2.2.1"
     },
     "cordovaPlugins": [
         "cordova-plugin-whitelist",
